--- a/sys-process/psmisc/ChangeLog
+++ b/sys-process/psmisc/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-process/psmisc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/psmisc/ChangeLog,v 1.138 2012/08/31 07:37:55 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/psmisc/ChangeLog,v 1.139 2012/10/03 09:42:47 radhermit Exp $
+
+*psmisc-22.20 (03 Oct 2012)
+
+  03 Oct 2012; Tim Harder <radhermit@gentoo.org> +psmisc-22.20.ebuild:
+  Version bump.
 
   31 Aug 2012; Samuli Suominen <ssuominen@gentoo.org>
   -files/psmisc-22.13-no-nls.patch, -psmisc-22.14.ebuild, -psmisc-22.18.ebuild,
