--- a/app-editors/gphpedit/ChangeLog
+++ b/app-editors/gphpedit/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-editors/gphpedit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/gphpedit/ChangeLog,v 1.25 2012/06/23 10:08:34 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/gphpedit/ChangeLog,v 1.26 2012/10/03 10:24:38 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gphpedit-0.9.98_rc1.ebuild:
+  x86 stable wrt bug #427544
 
 *gphpedit-0.9.98_rc1 (23 Jun 2012)
 
