--- a/app-editors/latexila/ChangeLog
+++ b/app-editors/latexila/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/latexila
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/latexila/ChangeLog,v 1.9 2012/06/16 10:36:38 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/latexila/ChangeLog,v 1.10 2012/10/03 10:25:18 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> latexila-2.4.1.ebuild:
+  x86 stable wrt bug #427544
 
 *latexila-2.4.1 (16 Jun 2012)
 
