--- a/app-misc/workrave/ChangeLog
+++ b/app-misc/workrave/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/workrave
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/workrave/ChangeLog,v 1.82 2012/05/13 12:00:17 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/workrave/ChangeLog,v 1.83 2012/10/03 10:26:14 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  workrave-1.9.4-r1.ebuild:
+  x86 stable wrt bug #427544
 
 *workrave-1.9.4-r1 (13 May 2012)
 
