--- a/media-sound/picard/ChangeLog
+++ b/media-sound/picard/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/picard
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/picard/ChangeLog,v 1.39 2012/09/25 10:27:25 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/picard/ChangeLog,v 1.40 2012/10/03 10:26:38 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> picard-1.0.ebuild:
+  Stable for amd64, wrt bug #436194
 
 *picard-1.1 (25 Sep 2012)
 
