--- a/net-libs/gnutls/ChangeLog
+++ b/net-libs/gnutls/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/gnutls
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.383 2012/10/02 14:18:12 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.384 2012/10/03 10:28:58 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gnutls-2.12.20.ebuild:
+  Stable for amd64, wrt bug #436368
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> gnutls-2.12.20.ebuild:
   Stable for HPPA (bug #436368).
