--- a/games-fps/warsow/ChangeLog
+++ b/games-fps/warsow/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/warsow
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/warsow/ChangeLog,v 1.38 2012/08/29 22:47:28 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/warsow/ChangeLog,v 1.39 2012/10/03 10:29:21 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> warsow-1.0.ebuild:
+  Stable for amd64, wrt bug #436808
 
   29 Aug 2012; Julian Ospald <hasufell@gentoo.org> warsow-0.5-r1.ebuild,
   warsow-0.62.ebuild, warsow-1.0.ebuild:
