--- a/net-print/cups-pk-helper/ChangeLog
+++ b/net-print/cups-pk-helper/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-print/cups-pk-helper
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups-pk-helper/ChangeLog,v 1.11 2012/09/23 06:11:58 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups-pk-helper/ChangeLog,v 1.12 2012/10/03 15:43:44 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  cups-pk-helper-0.2.2.ebuild:
+  x86 stable wrt bug #427544
 
   23 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
   cups-pk-helper-0.2.2.ebuild:
