--- a/sys-apps/gnome-disk-utility/ChangeLog
+++ b/sys-apps/gnome-disk-utility/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/gnome-disk-utility
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gnome-disk-utility/ChangeLog,v 1.68 2012/05/05 02:37:44 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gnome-disk-utility/ChangeLog,v 1.69 2012/10/03 15:44:55 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gnome-disk-utility-3.0.2-r201.ebuild:
+  x86 stable wrt bug #427544
 
   05 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   gnome-disk-utility-3.4.0.ebuild, gnome-disk-utility-3.4.1.ebuild:
