--- a/x11-libs/rep-gtk/ChangeLog
+++ b/x11-libs/rep-gtk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/rep-gtk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/rep-gtk/ChangeLog,v 1.80 2012/07/15 18:40:34 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/rep-gtk/ChangeLog,v 1.81 2012/10/03 16:00:51 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> rep-gtk-0.90.8.1.ebuild:
+  x86 stable wrt bug #427544
 
   15 Jul 2012; Raúl Porcel <armin76@gentoo.org> rep-gtk-0.90.8.ebuild:
   alpha/ia64/sparc stable wrt #410611
