--- a/x11-themes/gnome-icon-theme-extras/ChangeLog
+++ b/x11-themes/gnome-icon-theme-extras/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gnome-icon-theme-extras
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-icon-theme-extras/ChangeLog,v 1.10 2012/07/05 17:57:05 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-icon-theme-extras/ChangeLog,v 1.11 2012/10/03 16:02:06 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gnome-icon-theme-extras-3.4.0.ebuild:
+  x86 stable wrt bug #427544
 
   05 Jul 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   gnome-icon-theme-extras-2.30.1.ebuild, gnome-icon-theme-extras-3.0.0.ebuild,
