--- a/x11-themes/gnome-icon-theme-symbolic/ChangeLog
+++ b/x11-themes/gnome-icon-theme-symbolic/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gnome-icon-theme-symbolic
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-icon-theme-symbolic/ChangeLog,v 1.18 2012/05/20 19:36:16 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-icon-theme-symbolic/ChangeLog,v 1.19 2012/10/03 16:02:23 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gnome-icon-theme-symbolic-3.4.0.ebuild:
+  x86 stable wrt bug #427544
 
   20 May 2012; Samuli Suominen <ssuominen@gentoo.org>
   gnome-icon-theme-symbolic-3.2.2.ebuild:
