--- a/x11-themes/gnome-icon-theme/ChangeLog
+++ b/x11-themes/gnome-icon-theme/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gnome-icon-theme
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-icon-theme/ChangeLog,v 1.215 2012/05/15 23:38:12 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-icon-theme/ChangeLog,v 1.216 2012/10/03 16:02:37 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gnome-icon-theme-3.4.0.ebuild:
+  x86 stable wrt bug #427544
 
   15 May 2012; Alexis Ballier <aballier@gentoo.org>
   gnome-icon-theme-3.4.0.ebuild:
