--- a/app-pda/barry/ChangeLog
+++ b/app-pda/barry/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-pda/barry
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/barry/ChangeLog,v 1.24 2012/10/03 15:39:00 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/barry/ChangeLog,v 1.25 2012/10/03 16:15:44 ssuominen Exp $
+
+  03 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  -files/10-blackberry.rules, -barry-0.16.ebuild,
+  -files/barry-0.16-gcc45.patch, -barry-0.17.1.ebuild,
+  -files/blacklist-berry_charge.conf:
+  old
 
   03 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> barry-0.17.1-r1.ebuild,
   +files/barry-0.17.1-gcc47.patch:
