--- a/x11-themes/light-themes/ChangeLog
+++ b/x11-themes/light-themes/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/light-themes
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/light-themes/ChangeLog,v 1.13 2012/09/29 20:06:09 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/light-themes/ChangeLog,v 1.14 2012/10/03 16:25:48 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  light-themes-0.1.8.32.ebuild:
+  x86 stable wrt bug #427544
 
 *light-themes-0.1.93 (29 Sep 2012)
 
