--- a/sys-kernel/genkernel/ChangeLog
+++ b/sys-kernel/genkernel/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-kernel/genkernel
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.336 2012/09/10 01:33:51 sping Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.337 2012/10/03 16:58:11 sping Exp $
+
+*genkernel-3.4.43 (03 Oct 2012)
+
+  03 Oct 2012; Sebastian Pipping <sping@gentoo.org> +genkernel-3.4.43.ebuild:
+  Bump to 3.4.43
 
 *genkernel-3.4.42 (10 Sep 2012)
 
