--- a/app-text/qpdfview/ChangeLog
+++ b/app-text/qpdfview/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/qpdfview
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/qpdfview/ChangeLog,v 1.23 2012/10/03 12:51:43 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/qpdfview/ChangeLog,v 1.24 2012/10/03 17:41:45 ssuominen Exp $
+
+  03 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
+  Remove myself from metadata.xml since this has a life of it's own now.
 
   03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> qpdfview-0.3.4.ebuild:
   Stable for amd64, wrt bug #437044
