--- a/app-crypt/nwipe/ChangeLog
+++ b/app-crypt/nwipe/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-crypt/nwipe
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/nwipe/ChangeLog,v 1.3 2012/09/02 10:20:03 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/nwipe/ChangeLog,v 1.4 2012/10/03 17:43:35 ssuominen Exp $
+
+*nwipe-0.11 (03 Oct 2012)
+
+  03 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> +nwipe-0.11.ebuild:
+  Version bump.
 
   02 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> -nwipe-0.06.ebuild:
   old
