--- a/x11-terms/valaterm/ChangeLog
+++ b/x11-terms/valaterm/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-terms/valaterm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/valaterm/ChangeLog,v 1.6 2012/06/30 08:57:35 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/valaterm/ChangeLog,v 1.7 2012/10/03 17:52:17 ssuominen Exp $
+
+*valaterm-0.6 (03 Oct 2012)
+
+  03 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> +valaterm-0.6.ebuild:
+  Version bump wrt #436798 by Jacques-Pascal Deplaix
 
 *valaterm-0.5.1 (30 Jun 2012)
 
