--- a/net-print/hplip/ChangeLog
+++ b/net-print/hplip/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-print/hplip
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/hplip/ChangeLog,v 1.239 2012/10/03 11:46:51 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/hplip/ChangeLog,v 1.240 2012/10/03 17:55:40 billie Exp $
+
+*hplip-3.12.9-r2 (03 Oct 2012)
+
+  03 Oct 2012; Daniel Pielmeier <billie@gentoo.org> +hplip-3.12.9-r2.ebuild:
+  Fix bug #436794 - hp-scan fails in directories containing unicode characters.
+  Thanks to Arne Babenhauserheide for the report and the patch.
 
   03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> hplip-3.12.9-r1.ebuild:
   Stable for amd64, wrt bug #436858
