--- a/app-arch/unace/ChangeLog
+++ b/app-arch/unace/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/unace
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/unace/ChangeLog,v 1.42 2012/08/20 13:51:43 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/unace/ChangeLog,v 1.43 2012/10/03 17:58:24 ranger Exp $
+
+  03 Oct 2012; Brent Baude <ranger@gentoo.org> unace-2.5-r2.ebuild:
+  Marking unace-2.5-r2 ppc for bug 431696
 
   20 Aug 2012; Johannes Huber <johu@gentoo.org> unace-2.5-r2.ebuild:
   Stable for x86, wrt bug #431696
