--- a/sys-apps/diffutils/ChangeLog
+++ b/sys-apps/diffutils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/diffutils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/diffutils/ChangeLog,v 1.75 2012/09/23 18:29:31 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/diffutils/ChangeLog,v 1.76 2012/10/03 18:03:01 ranger Exp $
+
+  03 Oct 2012; Brent Baude <ranger@gentoo.org> diffutils-3.2.ebuild:
+  Marking diffutils-3.2 ppc for bug 431950
 
   23 Sep 2012; Raúl Porcel <armin76@gentoo.org> diffutils-3.2.ebuild:
   alpha/ia64/m68k/s390/sh/sparc stable wrt #431950
