--- a/sys-apps/gawk/ChangeLog
+++ b/sys-apps/gawk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/gawk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/ChangeLog,v 1.155 2012/09/27 02:02:47 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/ChangeLog,v 1.156 2012/10/03 18:03:45 ranger Exp $
+
+  03 Oct 2012; Brent Baude <ranger@gentoo.org> gawk-4.0.1.ebuild:
+  Marking gawk-4.0.1 ppc for bug 431954
 
   27 Sep 2012; Anthony G. Basile <blueness@gentoo.org> gawk-4.0.1.ebuild:
   stable ppc ppc64, bug #431954
