--- a/dev-util/debootstrap/ChangeLog
+++ b/dev-util/debootstrap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/debootstrap
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/debootstrap/ChangeLog,v 1.187 2012/09/11 15:54:36 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/debootstrap/ChangeLog,v 1.188 2012/10/03 18:04:34 ranger Exp $
+
+  03 Oct 2012; Brent Baude <ranger@gentoo.org> debootstrap-1.0.42.ebuild:
+  Marking debootstrap-1.0.42 ppc for bug 432424
 
   11 Sep 2012; Raúl Porcel <armin76@gentoo.org> debootstrap-1.0.42.ebuild:
   alpha/ia64/sh/sparc stable wrt #432424
