--- a/sys-apps/util-linux/ChangeLog
+++ b/sys-apps/util-linux/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/util-linux
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/util-linux/ChangeLog,v 1.402 2012/09/30 21:43:34 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/util-linux/ChangeLog,v 1.403 2012/10/03 18:05:24 ranger Exp $
+
+  03 Oct 2012; Brent Baude <ranger@gentoo.org> util-linux-2.21.2.ebuild:
+  Marking util-linux-2.21.2 ppc for bug 434334
 
   30 Sep 2012; Anthony G. Basile <blueness@gentoo.org> util-linux-2.21.2.ebuild:
   stable ppc ppc64, bug #434334
