--- a/sys-apps/coreutils/ChangeLog
+++ b/sys-apps/coreutils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/coreutils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.351 2012/09/30 17:53:12 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.352 2012/10/03 18:06:18 ranger Exp $
+
+  03 Oct 2012; Brent Baude <ranger@gentoo.org> coreutils-8.16.ebuild:
+  Marking coreutils-8.16 ppc for bug 431722
 
   30 Sep 2012; Raúl Porcel <armin76@gentoo.org> coreutils-8.16.ebuild:
   alpha/ia64/m68k/s390/sh/sparc stable wrt #431722
