--- a/media-gfx/gpicview/ChangeLog
+++ b/media-gfx/gpicview/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/gpicview
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gpicview/ChangeLog,v 1.27 2012/09/27 01:57:18 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gpicview/ChangeLog,v 1.28 2012/10/03 18:07:02 ranger Exp $
+
+  03 Oct 2012; Brent Baude <ranger@gentoo.org> gpicview-0.2.3.ebuild:
+  Marking gpicview-0.2.3 ppc for bug 432646
 
   27 Sep 2012; Anthony G. Basile <blueness@gentoo.org> gpicview-0.2.3.ebuild:
   stable ppc, bug #432646
