--- a/media-libs/audiofile/ChangeLog
+++ b/media-libs/audiofile/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/audiofile
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/audiofile/ChangeLog,v 1.117 2012/09/29 18:43:49 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/audiofile/ChangeLog,v 1.118 2012/10/03 18:07:44 ranger Exp $
+
+  03 Oct 2012; Brent Baude <ranger@gentoo.org> audiofile-0.3.4.ebuild:
+  Marking audiofile-0.3.4 ppc for bug 434304
 
   29 Sep 2012; Raúl Porcel <armin76@gentoo.org> audiofile-0.3.4.ebuild:
   alpha/ia64/sh/sparc stable wrt #434304
