--- a/app-admin/genromfs/ChangeLog
+++ b/app-admin/genromfs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/genromfs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/genromfs/ChangeLog,v 1.17 2012/09/09 15:22:09 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/genromfs/ChangeLog,v 1.18 2012/10/03 18:08:30 ranger Exp $
+
+  03 Oct 2012; Brent Baude <ranger@gentoo.org> genromfs-0.5.2.ebuild:
+  Marking genromfs-0.5.2 ppc for bug 431634
 
   09 Sep 2012; Raúl Porcel <armin76@gentoo.org> genromfs-0.5.1.ebuild,
   genromfs-0.5.2.ebuild:
