--- a/dev-libs/g-wrap/ChangeLog
+++ b/dev-libs/g-wrap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/g-wrap
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/g-wrap/ChangeLog,v 1.84 2012/08/27 17:57:52 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/g-wrap/ChangeLog,v 1.85 2012/10/03 18:10:04 ranger Exp $
+
+  03 Oct 2012; Brent Baude <ranger@gentoo.org> g-wrap-1.9.13.ebuild:
+  Marking g-wrap-1.9.13 ppc for bug 427470
 
   27 Aug 2012; Raúl Porcel <armin76@gentoo.org> g-wrap-1.9.11.ebuild,
   g-wrap-1.9.13.ebuild, g-wrap-1.9.14.ebuild:
