--- a/app-text/build-docbook-catalog/ChangeLog
+++ b/app-text/build-docbook-catalog/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/build-docbook-catalog
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/build-docbook-catalog/ChangeLog,v 1.32 2012/10/03 12:51:24 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/build-docbook-catalog/ChangeLog,v 1.33 2012/10/03 18:40:35 jer Exp $
+
+  03 Oct 2012; Jeroen Roovers <jer@gentoo.org>
+  build-docbook-catalog-1.19.1.ebuild:
+  Stable for HPPA (bug #437024).
 
   03 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
   build-docbook-catalog-1.19.1.ebuild:
