--- a/media-video/gtk-recordmydesktop/ChangeLog
+++ b/media-video/gtk-recordmydesktop/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/gtk-recordmydesktop
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/gtk-recordmydesktop/ChangeLog,v 1.27 2012/10/03 06:29:47 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/gtk-recordmydesktop/ChangeLog,v 1.28 2012/10/03 19:16:48 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
+  gtk-recordmydesktop-0.3.8-r2.ebuild:
+  Stable for amd64, wrt bug #437034
 
   03 Oct 2012; Ben de Groot <yngwin@gentoo.org>
   gtk-recordmydesktop-0.3.8-r2.ebuild:
