--- a/dev-util/intel-ocl-sdk/ChangeLog
+++ b/dev-util/intel-ocl-sdk/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/intel-ocl-sdk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/intel-ocl-sdk/ChangeLog,v 1.5 2012/10/02 06:43:43 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/intel-ocl-sdk/ChangeLog,v 1.6 2012/10/03 19:17:05 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
+  intel-ocl-sdk-2.0.31360.ebuild:
+  Stable for amd64, wrt bug #436940
 
   02 Oct 2012; Kacper Kowalik <xarthisius@gentoo.org>
   intel-ocl-sdk-2.0.31360.ebuild, metadata.xml:
