--- a/net-wireless/wpa_supplicant/ChangeLog
+++ b/net-wireless/wpa_supplicant/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/wpa_supplicant
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/wpa_supplicant/ChangeLog,v 1.182 2012/06/03 08:03:26 gurligebis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/wpa_supplicant/ChangeLog,v 1.183 2012/10/03 19:22:03 gurligebis Exp $
+
+  03 Oct 2012; <gurligebis@gentoo.org> wpa_supplicant-1.0.ebuild:
+  Migrated to REQUIRED_USE, fixing bug #436824
 
   03 Jun 2012; <gurligebis@gentoo.org> wpa_supplicant-1.0.ebuild:
   Making wpa_supplicant depend on net-wireless/crda on linux, fixing bug
