--- a/sys-firmware/iwl6005-ucode/ChangeLog
+++ b/sys-firmware/iwl6005-ucode/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-firmware/iwl6005-ucode
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-firmware/iwl6005-ucode/ChangeLog,v 1.2 2012/09/26 09:13:07 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-firmware/iwl6005-ucode/ChangeLog,v 1.3 2012/10/03 19:34:18 vapier Exp $
+
+  03 Oct 2012; Mike Frysinger <vapier@gentoo.org>
+  iwl6005-ucode-17.168.5.3.ebuild, iwl6005-ucode-18.168.6.1.ebuild:
+  Drop useless DEPEND strings -- these work fine w/out udev or hotplug.
 
 *iwl6005-ucode-18.168.6.1 (26 Sep 2012)
 
@@ -22,4 +26,3 @@
   19 Jul 2011; Tony Vroon <chainsaw@gentoo.org>
   +iwl6005-ucode-17.168.5.3.ebuild, +metadata.xml:
   Initial commit; ebuild by Randall Wald in bug #367987.
-
