--- a/dev-libs/expat/ChangeLog
+++ b/dev-libs/expat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/expat
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/expat/ChangeLog,v 1.142 2012/10/03 11:02:34 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/expat/ChangeLog,v 1.143 2012/10/03 19:37:47 jer Exp $
+
+  03 Oct 2012; Jeroen Roovers <jer@gentoo.org> expat-2.1.0-r2.ebuild:
+  Stable for HPPA (bug #437036).
 
   03 Oct 2012; Anthony G. Basile <blueness@gentoo.org> expat-2.1.0-r2.ebuild:
   stable arm, bug #437036
