--- a/net-wireless/hostapd/ChangeLog
+++ b/net-wireless/hostapd/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/hostapd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/hostapd/ChangeLog,v 1.127 2012/09/24 16:02:09 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/hostapd/ChangeLog,v 1.128 2012/10/03 19:56:15 gurligebis Exp $
+
+*hostapd-1.0-r3 (03 Oct 2012)
+
+  03 Oct 2012; <gurligebis@gentoo.org> +hostapd-1.0-r3.ebuild,
+  +files/hostapd-1.0-libnl_path_fix.patch:
+  Moving to depend on dev-libs/libnl:3 instead of dev-libs/libnl:1.1
 
   24 Sep 2012; Agostino Sarubbo <ago@gentoo.org> hostapd-1.0-r2.ebuild:
   cleanup + EAPI4 bump
