--- a/games-misc/lolcat/ChangeLog
+++ b/games-misc/lolcat/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for games-misc/lolcat
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/lolcat/ChangeLog,v 1.1 2012/09/26 22:25:10 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/lolcat/ChangeLog,v 1.2 2012/10/03 20:37:59 hasufell Exp $
+
+*lolcat-42.0.99-r1 (03 Oct 2012)
+
+  03 Oct 2012; Julian Ospald <hasufell@gentoo.org> -lolcat-42.0.99.ebuild,
+  +lolcat-42.0.99-r1.ebuild:
+  fix dependencies, add ruby19
 
   26 Sep 2012; Julian Ospald <hasufell@gentoo.org> +lolcat-42.0.99.ebuild,
   +metadata.xml:
