--- a/sys-libs/libselinux/ChangeLog
+++ b/sys-libs/libselinux/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/libselinux
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/libselinux/ChangeLog,v 1.84 2012/09/08 18:44:22 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/libselinux/ChangeLog,v 1.85 2012/10/03 20:42:02 vapier Exp $
+
+  03 Oct 2012; Mike Frysinger <vapier@gentoo.org> libselinux-2.1.9-r2.ebuild:
+  Fix /usr/lib handling in utils subdir too.
 
 *libselinux-2.1.9-r2 (08 Sep 2012)
 
