--- a/sys-kernel/linux-firmware/ChangeLog
+++ b/sys-kernel/linux-firmware/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for sys-kernel/linux-firmware
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-firmware/ChangeLog,v 1.53 2012/09/18 07:58:23 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-firmware/ChangeLog,v 1.54 2012/10/03 20:45:59 chithanh Exp $
+
+*linux-firmware-20120924 (03 Oct 2012)
+
+  03 Oct 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +linux-firmware-20120924.ebuild, -linux-firmware-20120502.ebuild,
+  -linux-firmware-20120615.ebuild, -linux-firmware-20120708.ebuild,
+  linux-firmware-20120719.ebuild, linux-firmware-20120816.ebuild,
+  linux-firmware-20120909.ebuild, linux-firmware-99999999.ebuild:
+  New snapshot. Remove old. Block iwl2000-ucode.
 
   18 Sep 2012; Johannes Huber <johu@gentoo.org> linux-firmware-20120719.ebuild:
   Stable for x86, wrt bug #433006
