--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7004 2012/10/03 12:17:35 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7005 2012/10/03 20:58:03 ulm Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
@@ -8,6 +8,8 @@
 
   03 Oct 2012; Ulrich Müller <ulm@gentoo.org> license_groups:
   Add TeX-other-free to MISC-FREE license group, bug 436698.
+  Add SVFL to MISC-FREE license group. Remove as-is from GPL-COMPATIBLE and
+  OSI-APPROVED license groups; it should never have been added to them.
 
   02 Oct 2012; Mike Gilbert <floppym@gentoo.org> package.mask:
   Update dev channel mask for beta release of chromium-23.
