--- a/net-analyzer/wireshark/ChangeLog
+++ b/net-analyzer/wireshark/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.404 2012/10/03 16:21:09 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.405 2012/10/03 21:56:16 blueness Exp $
+
+  03 Oct 2012; Anthony G. Basile <blueness@gentoo.org> wireshark-1.8.3.ebuild:
+  stable ppc ppc64, bug #437026
 
 *wireshark-1.8.3-r1 (03 Oct 2012)
 
