--- a/sys-kernel/vanilla-sources/ChangeLog
+++ b/sys-kernel/vanilla-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/vanilla-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1057 2012/10/03 09:37:07 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/vanilla-sources/ChangeLog,v 1.1058 2012/10/03 23:41:24 mpagano Exp $
+
+*vanilla-sources-3.0.44 (03 Oct 2012)
+
+  03 Oct 2012; Michael Pagano <mpagano@gentoo.org>
+  +vanilla-sources-3.0.44.ebuild:
+  Version bump
 
 *vanilla-sources-3.5.5 (03 Oct 2012)
 *vanilla-sources-3.4.12 (03 Oct 2012)
