--- a/dev-util/gdbus-codegen/ChangeLog
+++ b/dev-util/gdbus-codegen/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/gdbus-codegen
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gdbus-codegen/ChangeLog,v 1.32 2012/10/03 11:24:46 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gdbus-codegen/ChangeLog,v 1.33 2012/10/03 23:59:49 tetromino Exp $
+
+  03 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
+  gdbus-codegen-2.32.4.ebuild, gdbus-codegen-2.34.0.ebuild:
+  Use PYTHON_USE.
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   gdbus-codegen-2.32.4.ebuild:
