--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1111 2012/09/29 17:12:20 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1112 2012/10/04 00:06:52 zmedico Exp $
+
+*portage-2.1.11.24 (04 Oct 2012)
+
+  04 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.24.ebuild:
+  2.1.11.24 version bump. This fixes bug #436918 (add egencache --update-
+  manifests action) and bug #436974 (regression if fetching for RESTRICT=mirror
+  ebuilds with python-2.6). Bug #431026 tracks all bugs fixed since
+  portage-2.1.11.9.
 
   29 Sep 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.22.ebuild,
   -portage-2.2.0_alpha133.ebuild:
