--- a/app-text/build-docbook-catalog/ChangeLog
+++ b/app-text/build-docbook-catalog/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/build-docbook-catalog
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/build-docbook-catalog/ChangeLog,v 1.33 2012/10/03 18:40:35 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/build-docbook-catalog/ChangeLog,v 1.34 2012/10/04 02:57:58 blueness Exp $
+
+  04 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  build-docbook-catalog-1.19.1.ebuild:
+  stable arm ppc ppc64, bug #437024
 
   03 Oct 2012; Jeroen Roovers <jer@gentoo.org>
   build-docbook-catalog-1.19.1.ebuild:
