--- a/www-client/google-chrome/ChangeLog
+++ b/www-client/google-chrome/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-client/google-chrome
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.199 2012/10/03 03:37:40 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.200 2012/10/04 03:27:11 floppym Exp $
+
+  04 Oct 2012; Mike Gilbert <floppym@gentoo.org>
+  google-chrome-23.0.1271.10_beta158896.ebuild:
+  Fix google-chrome-23 deps.
 
 *google-chrome-24.0.1284.2_alpha159713 (03 Oct 2012)
 
