--- a/net-misc/mediatomb/ChangeLog
+++ b/net-misc/mediatomb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/mediatomb
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/mediatomb/ChangeLog,v 1.37 2012/10/02 07:48:56 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/mediatomb/ChangeLog,v 1.38 2012/10/04 03:52:25 vapier Exp $
+
+  04 Oct 2012; Mike Frysinger <vapier@gentoo.org> mediatomb-0.12.1-r3.ebuild:
+  Require newer spidermonkey #437038 by BT.
 
   02 Oct 2012; Mike Frysinger <vapier@gentoo.org>
   +files/mediatomb-0.12.1-mozjs187.patch, mediatomb-0.12.1-r3.ebuild:
