--- a/dev-vcs/tortoisehg/ChangeLog
+++ b/dev-vcs/tortoisehg/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-vcs/tortoisehg
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/tortoisehg/ChangeLog,v 1.23 2012/09/10 20:14:10 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/tortoisehg/ChangeLog,v 1.24 2012/10/04 05:57:37 polynomial-c Exp $
+
+*tortoisehg-2.5.1 (04 Oct 2012)
+
+  04 Oct 2012; Lars Wendler <polynomial-c@gentoo.org> +tortoisehg-2.5.1.ebuild:
+  non-maintainer commit: Version bump.
 
   10 Sep 2012; Mike Gilbert <floppym@gentoo.org> tortoisehg-2.5.ebuild,
   tortoisehg-9999.ebuild:
