--- a/x11-wm/sawfish/ChangeLog
+++ b/x11-wm/sawfish/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/sawfish
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/sawfish/ChangeLog,v 1.112 2012/09/15 07:47:27 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/sawfish/ChangeLog,v 1.113 2012/10/04 07:07:42 phajdan.jr Exp $
+
+  04 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> sawfish-1.9.0.ebuild:
+  x86 stable wrt bug #427544
 
 *sawfish-1.9.1 (15 Sep 2012)
 
