--- a/app-accessibility/at-spi2-core/ChangeLog
+++ b/app-accessibility/at-spi2-core/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-accessibility/at-spi2-core
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-core/ChangeLog,v 1.11 2012/09/27 05:07:12 mattst88 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-core/ChangeLog,v 1.12 2012/10/04 07:08:00 phajdan.jr Exp $
+
+  04 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  at-spi2-core-2.2.3.ebuild:
+  x86 stable wrt bug #427544
 
   27 Sep 2012; Matt Turner <mattst88@gentoo.org> at-spi2-core-2.4.2.ebuild,
   at-spi2-core-2.6.0.ebuild:
